...

    <string name="switch_account_see_details">See details</string>
    <string name="switch_account_sign_out">Sign out</string>
    <string name="switch_account_manage_accounts">Manage accounts</string>
    <string name="switch_account_title">Switch account</string>
    <string name="filters_menu_title">Filter view by</string>
    <string name="filters_menu_all_items">All items</string>
    <string name="filters_menu_last_used">Last used (default)</string>
    <string name="filters_menu_favourites">Favourites</string>
    <string name="filters_menu_recently_modified">Recently modified</string>
    <string name="filters_menu_shared_with_me">Shared with me</string>
    <string name="filters_menu_owned_by_me">Owned by me</string>
    <string name="filters_menu_expiry">Expiry</string>
    <string name="filters_menu_loading">Loading</string>
    <string name="filters_menu_folders">Folders</string>
    <string name="filters_menu_tags">Tags</string>
    <string name="filters_menu_groups">Groups</string>

    <string name="main_menu_home">Home</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_otp">TOTP</string>
    <string name="main_chrome_native_autofill_setup_success">Chrome autofill setup success</string>

...
    <string name="resource_form_note_content">Content</string>
    <string name="resource_form_enter_note">Enter note</string>
    <string name="resource_form_note_info">The note is part of the secret if you want to be able to search this content, use metadata description.</string>
    <string name="resource_form_metadata_description_info">If you want the description to be part of the secret, use note instead.</string>
    <string name="resource_form_resource_name">Resource name</string>
    <string name="resource_form_name">Name</string>
    <string name="resource_form_create_password">Create a password</string>
    <string name="resource_form_create_custom_fields">Create custom fields</string>
    <string name="resource_form_edit_resource">Edit %s</string>
    <string name="resource_form_create_totp">Create a TOTP</string>
    <string name="resource_form_view_advanced_settings">View advanced settings</string>
    <string name="resource_form_view_additional_secrets">Additional secrets</string>
    <string name="resource_form_view_metadata">Metadata</string>
...

    <string name="password_generator_known_strength_format">%1$s (entropy: %2$.2f bits)</string>
    <string name="password_generator_unknown_strength_format">Strength (entropy: n/a bits)</string>

    <string name="create_resource_menu_create_a_resource">Create a resource</string>
    <string name="create_resource_menu_create_totp">TOTP</string>
    <string name="create_resource_menu_create_password">Password</string>
    <string name="create_resource_menu_create_note">Note</string>
    <string name="create_resource_menu_create_folder">Folder</string>
    <string name="create_resource_menu_other">Other</string>
    <string name="create_resource_menu_other_title">Other resource types</string>
    <string name="create_resource_menu_create_pin_code">Pin code</string>

...
