...
 * @since v1.0
 */

package net.svaroh.passly.testtags.composetags

object Home {
    const val SCREEN = "HomeScreen"
    const val SEARCH_FILTER = "HomeSearchFilter"
    const val FOLDER_ROW = "HomeFolderRow"
    const val RESOURCE_ROW = "HomeResourceRow"
    const val RESOURCE_MORE = "HomeResourceMore"
    const val FAB = "HomeFab"
}

