package net.svaroh.passly.testtags.composetags

object PasswordField {
    const val VISIBILITY_TOGGLE = "PasswordFieldVisibilityToggle"
}
